# clove-lang

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  REFERENCE.md  clovelang.bnf
.cargo/: config.toml
src/: ast.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  output.rs  parser.rs  transform.rs  value.rs
src/ast/: expressions.rs  operators.rs  query.rs  statements.rs  tokens.rs  udf.rs
src/cli/: check.rs  convert.rs  docs.rs  mod.rs  onboard.rs
tests/: integration_tests.rs  lexer_tests.rs  parser_tests.rs  spec_compliance.rs  transform_tests.rs
