[package]
name = "clove-lang"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "A JSON query language for filtering, transforming, and validating JSON documents"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "clove"
path = "src/main.rs"

[dependencies]
atty = "0.2"
clap = { version = "4", features = ["derive"] }
rust_decimal = "1.39"
serde_json = "1"


